--- a/src/clareamento-dental.html
+++ b/src/clareamento-dental.html
@@ -376,17 +376,6 @@
               <span>Dra. Julia Teixeira Costa</span>
               <p>Clinica Geral - CROSP 157327</p>
             </div>
-
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Caroline Bernardo Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Caroline Bernardo</span>
-              <p>Estética e Prótese - CROSP 12131</p>
-            </div> -->
           </div>
         </div>
       </section>
@@ -418,7 +407,8 @@
                     href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                     onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   >
-                    <i class="fa-brands fa-whatsapp"></i> Fale conosco</a
+                    <i class="fa-brands fa-whatsapp"></i> Agendar sua
+                    consulta</a
                   >
                 </div>
               </div>
