--- a/src/index.html
+++ b/src/index.html
@@ -371,45 +371,45 @@
         <div class="container">
           <h2>Principais Tratamentos</h2>
           <div class="itens-tratamento">
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
-              </div>
-              <div class="text-tratamento">
-                <a href="./ortodontia.html">
+            <a href="./ortodontia.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+                <div class="text-tratamento">
                   <span>Alinhadores invisíveis</span>
-                </a>
+                </div>
               </div>
-            </div>
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
-              </div>
-              <div class="text-tratamento">
-                <a href="./clareamento-dental.html">
+            </a>
+            <a href="./clareamento-dental.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+                <div class="text-tratamento">
                   <span>Clareamento</span>
-                </a>
+                </div>
               </div>
-            </div>
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
+            </a>
+            <a href="./lente-de-contato-dental.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+                <div class="text-tratamento">
+                  <span>Lente de Contato Dental</span>
+                </div>
               </div>
-              <div class="text-tratamento">
-                <a href="./lente-de-contato-dental.html"
-                  ><span>Lente de Contato Dental</span></a
-                >
-              </div>
-            </div>
+            </a>
             <!-- <div class="item-tratamento">
               <div class="plus">
                 <img
