--- a/src/lente-de-contato-dental.html
+++ b/src/lente-de-contato-dental.html
@@ -436,7 +436,8 @@
                     href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                     onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   >
-                    <i class="fa-brands fa-whatsapp"></i> Fale conosco</a
+                    <i class="fa-brands fa-whatsapp"></i> Agendar sua
+                    consulta</a
                   >
                 </div>
               </div>
