--- a/src/sp/cirurgia-ortognatica.html
+++ b/src/sp/cirurgia-ortognatica.html
@@ -403,7 +403,7 @@
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/espaco_aconchegante4.webp"
+                src="./resources/img/cirurgia_ortognatica_3.webp"
                 alt=""
                 width="1000"
                 height="667"
@@ -432,21 +432,11 @@
               </p>
             </div>
 
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Amanda Zarpellon</span>
-              <p>Buco-Maxilo - CROSP 107223</p>
-            </div> -->
-
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
+                  class="jaqueline-ramos"
                   alt="Foto da Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
