--- a/src/sp/coroas-de-porcelana.html
+++ b/src/sp/coroas-de-porcelana.html
@@ -327,12 +327,44 @@
           </div>
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
-              <img
-                src="./resources/img/Coroas-de-Porcelana-Vila-Olímpia.webp"
-                alt=""
-                width="1000"
-                height="667"
-              />
+              <div class="glide">
+                <div class="glide__track" data-glide-el="track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide">
+                      <img
+                        src="./resources/img/coroas_de_pocelana_nova_2.webp"
+                        alt="Equipamento 1"
+                        width="1000"
+                        height="667"
+                      />
+                    </li>
+                    <li class="glide__slide">
+                      <img
+                        src="./resources/img/coroas_de_pocelana_nova_1.webp"
+                        alt="Scanner Digital"
+                        width="1000"
+                        height="667"
+                      />
+                    </li>
+                  </ul>
+                </div>
+
+                <!-- Setas de Navegação -->
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button
+                    class="glide__arrow glide__arrow--left"
+                    data-glide-dir="<"
+                  >
+                    &#8249;
+                  </button>
+                  <button
+                    class="glide__arrow glide__arrow--right"
+                    data-glide-dir=">"
+                  >
+                    &#8250;
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -359,35 +391,14 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Neviane.webp"
+                  class="neviane-boldori"
+                  alt="Foto da Dra. Neviane Boldori Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Vitoria Zaparoli Calisto</span>
-              <p>Clinica Geral - CROSP 141235</p>
+              <span>Dra. Neviane Boldori </span>
+              <p>Estética e Clinica Geral - CROSP 135444</p>
             </div>
-
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Julia.webp"
-                  alt="Foto da Dra. Julia Teixeira Costa Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Julia Teixeira Costa</span>
-              <p>Clinica Geral - CROSP 157327</p>
-            </div>
-
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Caroline Bernardo Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Caroline Bernardo</span>
-              <p>Estética e Prótese - CROSP 12131</p>
-            </div> -->
           </div>
         </div>
       </section>
