--- a/src/sp/dentes-do-siso.html
+++ b/src/sp/dentes-do-siso.html
@@ -337,7 +337,7 @@
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Dentes-do-Siso-Vila-Olímpia.webp"
+                src="./resources/img/dentes_do_siso_cirurgia.webp"
                 alt=""
                 width="1000"
                 height="667"
@@ -352,50 +352,28 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Paloma Valenzuela</span>
-              <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
-            </div> -->
-
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Amanda Zarpellon</span>
-              <p>Buco-Maxilo - CROSP 107223</p>
-            </div> -->
-
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
+                  class="jaqueline-ramos"
                   alt="Foto da Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra Jaqueline Ramos</span>
               <p>Implantodontia e BucoMaxiloFacial - CROSP 119599</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dr. André Sakima Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Leticia-Calil.webp"
+                  class="leticia-calil"
+                  alt="Foto da Dra. Dra. Leticia Venâncio Calil Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dr. André Sakima</span>
-              <p>
-                Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial -
-                CROSP 66494
-              </p>
+              <span>Dra. Leticia Venâncio Calil</span>
+              <p>Cirurgia BucoMaxiloFacial - CROSP 133820</p>
             </div>
           </div>
 
