--- a/src/sp/disfuncao-do-atm.html
+++ b/src/sp/disfuncao-do-atm.html
@@ -329,7 +329,7 @@
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Disfunção-do-ATM-Vila-Olímpia.webp"
+                src="./resources/img/disfuncao_do_atm_img_nova.webp"
                 alt=""
                 width="1000"
                 height="667"
@@ -370,25 +370,12 @@
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
+                  class="jaqueline-ramos"
                   alt="Foto da Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra Jaqueline Ramos</span>
               <p>Implantodontia e BucoMaxiloFacial - CROSP 119599</p>
-            </div>
-
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dr. André Sakima Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dr. André Sakima</span>
-              <p>
-                Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial -
-                CROSP 66494
-              </p>
             </div>
           </div>
         </div>
