--- a/src/sp/implante-dentario.html
+++ b/src/sp/implante-dentario.html
@@ -345,7 +345,7 @@
               "
             >
               <img
-                src="./resources/img/Implante-Dentário-Vila-Olímpia.webp"
+                src="./resources/img/Implante_dentario_novo.webp"
                 alt=""
                 width="1000"
                 height="667"
@@ -360,16 +360,17 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
-            <!-- <div class="equipe-curriculo">
+            <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Jaqueline-Ramos.webp"
+                  class="jaqueline-ramos"
+                  alt="Foto da Dra. Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Paloma Valenzuela</span>
-              <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
-            </div> -->
+              <span>Dra. Jaqueline Ramos</span>
+              <p>Implantodontia e Cirurgia BucoMaxiloFacial - CROSP 119599</p>
+            </div>
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
@@ -387,7 +388,6 @@
           </div>
         </div>
       </section>
-
       <!--<section class="s-depoimento">
         <div class="container">
           <div class="box-depoimento">
