--- a/src/sp/index.html
+++ b/src/sp/index.html
@@ -364,13 +364,16 @@
       <section class="s-itens-menu">
         <div class="container">
           <div class="itens-index">
-            <p class="box-iten-index">Alinhadores invisíveis</p>
-            <p class="box-iten-index">Clareamento</p>
-            <p class="box-iten-index">Lente de Contato Dental</p>
-            <!-- <p class="box-iten-index">Lente de Contato Dental</p> -->
-          </div>
-          <div class="iten-tratamento">
-            <a href="">Todos os Tratamentos</a>
+            <a href="./ortodontia.html">
+              <p class="box-iten-index">Alinhadores invisíveis</p>
+            </a>
+            <a href="./clareamento-dental.html">
+              <p class="box-iten-index">Clareamento</p>
+            </a>
+
+            <a href="./lente-de-contato-dental.html">
+              <p class="box-iten-index">Lente de Contato Dental</p>
+            </a>
           </div>
         </div>
       </section>
@@ -379,53 +382,46 @@
         <div class="container">
           <h2>Principais Tratamentos</h2>
           <div class="itens-tratamento">
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
+            <a href="./ortodontia.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+                <div class="text-tratamento">
+                  <span>Alinhadores invisíveis</span>
+                </div>
               </div>
-              <div class="text-tratamento">
-                <span>Alinhadores invisíveis</span>
+            </a>
+            <a href="./clareamento-dental.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+
+                <div class="text-tratamento">
+                  <span>Clareamento</span>
+                </div>
               </div>
-            </div>
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
+            </a>
+            <a href="./lente-de-contato-dental.html">
+              <div class="item-tratamento">
+                <div class="plus">
+                  <img
+                    src="resources/icons/plus-icon.svg"
+                    alt="Mais tratamentos"
+                  />
+                </div>
+                <div class="text-tratamento">
+                  <span>Lente de Contato Dental</span>
+                </div>
               </div>
-              <div class="text-tratamento">
-                <span>Clareamento</span>
-              </div>
-            </div>
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
-              </div>
-              <div class="text-tratamento">
-                <span>Lente de Contato Dental</span>
-              </div>
-            </div>
-            <!-- <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
-              </div>
-              <div class="text-tratamento">
-                <span>Lente de Contato Dental</span>
-              </div>
-            </div> -->
-          </div>
-          <div class="iten-tratamento">
-            <a href="">Todos os Tratamentos</a>
+            </a>
           </div>
         </div>
       </section>
@@ -692,7 +688,7 @@
                     href="https://api.whatsapp.com/send?phone=5511913428770&amp;text=Oi, gostaria de agendar uma consulta"
                     onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                   >
-                    <i class="fa-brands fa-whatsapp"></i> Enviar Mensagem</a
+                    <i class="fa-brands fa-whatsapp"></i>Agendar sua consulta</a
                   >
                 </div>
               </div>
