--- a/src/sp/odontologia-pre-natal.html
+++ b/src/sp/odontologia-pre-natal.html
@@ -380,7 +380,18 @@
       <section class="s-equipe">
         <div class="container">
           <h2>Equipe</h2>
-          <div class="equipe-info"></div>
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Vitoria Zaparoli Calisto</span>
+              <p>Clinica Geral - CROSP 141235</p>
+            </div>
+          </div>
         </div>
       </section>
 
