--- a/src/sp/tratamento-de-canal.html
+++ b/src/sp/tratamento-de-canal.html
@@ -309,7 +309,10 @@
 
       <section class="s-tratamento-base">
         <div class="container">
-          <div class="info-tratamento-base">
+          <div
+            class="info-tratamento-base"
+            style="justify-content: space-between"
+          >
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
                 <h2>Tratamento de Canal (Endodontia)</h2>
@@ -327,7 +330,7 @@
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Tratamento-de-Canal-Endodontia-Vila-Olímpia.webp"
+                  src="./resources/img/endo.webp"
                   alt=""
                   width="1000"
                   height="667"
@@ -341,7 +344,19 @@
       <section class="s-equipe">
         <div class="container">
           <h2>Equipe</h2>
-          <div class="equipe-info"></div>
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Sara_new.webp"
+                  class="sara-hirata"
+                  alt="Foto da Dra. Sara Hirata Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Sara Hirata</span>
+              <p>Endodontia - CROSP 145629</p>
+            </div>
+          </div>
         </div>
       </section>
 
