--- a/src/sp/ortodontia.html
+++ b/src/sp/ortodontia.html
@@ -422,30 +422,19 @@
         <div class="container">
           <h2>Equipe</h2>
 
+          <div class="equipe-info"></div>
           <div class="equipe-info">
-            <!-- <div class="equipe-curriculo">
+            <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Gabrielle Feitoza Bassi Costa Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Brunna-Heloisa.webp"
+                  alt="Foto da Dra. Brunna Helloisa Souza  Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Gabrielle Feitoza Bassi Costa</span>
-              <p>Ortodontia - CROSP 45723</p>
-            </div> -->
+              <span>Dra. Brunna Helloisa Souza </span>
+              <p>Ortodontia - CROSP 141324</p>
+            </div>
 
-            <!-- <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Carolina-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Carolina Popp Leme Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Carolina Popp Leme</span>
-              <p>Ortodontia - CROSP 124782</p>
-            </div> -->
-          </div>
-          <div class="equipe-info">
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
@@ -460,23 +449,12 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Kamilla-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Kamilla Andrade Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Kamilla Andrade</span>
-              <p>Clinica Greal - CROSP 144720</p>
-            </div>
-
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Brunna-Heloisa.webp"
-                  alt="Foto da Dra. Brunna Helloisa Souza  Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Brunna Helloisa Souza </span>
-              <p>Ortodontia - CROSP 141324</p>
+              <span>Dra. Vitoria Zaparoli Calisto</span>
+              <p>Clinica Geral - CROSP 141235</p>
             </div>
           </div>
         </div>
