--- a/src/sp/tratamento-da-gengiva.html
+++ b/src/sp/tratamento-da-gengiva.html
@@ -312,7 +312,7 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>Tratamento da Gengiva (Periodontia)</h2>
+                <h2 style="width: 90%">Tratamento da Gengiva (Periodontia)</h2>
                 <strong>Doença Periodontal</strong>
                 <p>
                   É uma doença silenciosa causada por bactérias que afetam os
@@ -353,9 +353,12 @@
               </div>
             </div>
             <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
+              <div
+                class="img-right-tratamentoBase"
+                style="margin: 0px 0 0 -30%"
+              >
                 <img
-                  src="./resources/img/Tratamento-de-Canal-Endodontia-Vila-Olímpia.webp"
+                  src="./resources/img/periodontia_nova_foto.webp"
                   alt=""
                   width="1000"
                   height="667"
