--- a/src/sp/depoimentos.html
+++ b/src/sp/depoimentos.html
@@ -312,7 +312,11 @@
               <a href="/sp/cirurgia-ortognatica.html">Cirurgia Ortognática</a>
             </div>
             <a href="/sp/equipe.html" class="item-menu-mobile">Equipe</a>
-            <a href="/sp/#depoimentos">Depoimentos</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=5511988711774"
+              target="_blank"
+              >Trabalhe Conosco</a
+            >
             <a href="/sp/#endereco">Endereço</a>
 
             <a href="/sp/contato.html">Contato</a>
@@ -321,6 +325,21 @@
           <button class="openbtn" onclick="openNav()">☰</button>
         </nav>
       </header>
+      <div id="whatsapp-popup" class="popup-overlay" style="display: none">
+        <div class="popup-content">
+          <span class="popup-close" onclick="fecharPopup()">&times;</span>
+          <h2>Atenção</h2>
+          <p>Atendemos somente clientes particulares e Omint.</p>
+          <a
+            href="#"
+            id="botao-agendar"
+            class="botao-agendar"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Agendar</a
+          >
+        </div>
+      </div>
 
       <section class="s-depoimento" style="margin: 20rem 0">
         <div class="container">
