--- a/src/sp/index.html
+++ b/src/sp/index.html
@@ -267,7 +267,11 @@
                 <a href="/sp/equipe.html">Equipe</a>
               </li>
               <li>
-                <a href="/sp/#depoimentos">Depoimentos</a>
+                <a
+                  href="https://api.whatsapp.com/send?phone=5511988711774"
+                  target="_blank"
+                  >Trabalhe Conosco</a
+                >
               </li>
               <li>
                 <a href="/sp/#endereco">Endereço</a>
@@ -326,7 +330,11 @@
               <a href="/sp/odontopediatria.html">Odontopediatria</a>
             </div>
             <a href="/sp/equipe.html" class="item-menu-mobile">Equipe</a>
-            <a href="/sp/#depoimentos">Depoimentos</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=5511988711774"
+              target="_blank"
+              >Trabalhe Conosco</a
+            >
             <a href="/sp/#endereco">Endereço</a>
 
             <a href="/sp/contato.html">Contato</a>
@@ -335,6 +343,21 @@
           <button class="openbtn" onclick="openNav()">☰</button>
         </nav>
       </header>
+      <div id="whatsapp-popup" class="popup-overlay" style="display: none">
+        <div class="popup-content">
+          <span class="popup-close" onclick="fecharPopup()">&times;</span>
+          <h2>Atenção</h2>
+          <p>Atendemos somente clientes particulares e Omint.</p>
+          <a
+            href="#"
+            id="botao-agendar"
+            class="botao-agendar"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Agendar</a
+          >
+        </div>
+      </div>
 
       <section class="s-banner">
         <div class="imgBanner">
