--- a/src/sp/indexfelipe.html
+++ b/src/sp/indexfelipe.html
@@ -224,7 +224,13 @@
               <li>
                 <a href="/sp/equipe.html">Equipe</a>
               </li>
-              <li><a href="/sp/#depoimentos">Depoimentos</a></li>
+              <li>
+                <a
+                  href="https://api.whatsapp.com/send?phone=5511988711774"
+                  target="_blank"
+                  >Trabalhe Conosco</a
+                >
+              </li>
               <li><a href="/sp/#endereco">Endereço</a></li>
 
               <li>
@@ -343,7 +349,11 @@
               </option>
             </select>
             <a href="/sp/equipe.html">Equipe</a>
-            <a href="/sp/#depoimentos">Depoimentos</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=5511988711774"
+              target="_blank"
+              >Trabalhe Conosco</a
+            >
             <a href="#localizacao">Endereço</a>
 
             <a href="/sp/contato.html">Contato</a>
@@ -352,6 +362,21 @@
           <button class="openbtn" onclick="openNav()">☰</button>
         </nav>
       </header>
+      <div id="whatsapp-popup" class="popup-overlay" style="display: none">
+        <div class="popup-content">
+          <span class="popup-close" onclick="fecharPopup()">&times;</span>
+          <h2>Atenção</h2>
+          <p>Atendemos somente clientes particulares e Omint.</p>
+          <a
+            href="#"
+            id="botao-agendar"
+            class="botao-agendar"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Agendar</a
+          >
+        </div>
+      </div>
       <div id="contato"></div>
 
       <footer class="s-footer">
