--- a/src/sp/page43.html
+++ b/src/sp/page43.html
@@ -213,7 +213,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <li>
                 <a href="/sp/equipe.html">Equipe</a>
               </li>
-              <li><a href="/sp/#depoimentos">Depoimentos</a></li>
+              <li><a
+                  href="https://api.whatsapp.com/send?phone=5511988711774"
+                  target="_blank"
+                  >Trabalhe Conosco</a
+                ></li>
               <li><a href="/sp/#endereco">Endereço</a></li>
               
               <li>
@@ -320,6 +324,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <button class="openbtn" onclick="openNav()">☰</button>
         </nav>
       </header>
+      <div id="whatsapp-popup" class="popup-overlay" style="display: none">
+        <div class="popup-content">
+          <span class="popup-close" onclick="fecharPopup()">&times;</span>
+          <h2>Atenção</h2>
+          <p>Atendemos somente clientes particulares e Omint.</p>
+          <a
+            href="#"
+            id="botao-agendar"
+            class="botao-agendar"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Agendar</a
+          >
+        </div>
+      </div>
 
       <section class="s-blog">
         <div class="container">
